# drone_packages

./: LICENSE  README.md
camera_info_publisher/: CMakeLists.txt  package.xml
camera_info_publisher/config/: camera_info.yaml
camera_info_publisher/src/: camera_info_publisher.cpp
common_utilities/: CMakeLists.txt  package.xml
common_utilities/include/common_utilities/: transform_util.hpp
common_utilities/src/: transform_util.cpp
common_utilities/test/: transform_util_test.cpp
data_logging_utils/: CMakeLists.txt  package.xml
data_logging_utils/include/data_logging_utils/: data_logger.hpp
data_logging_utils/scripts/: plot_data_logger.py
data_logging_utils/src/: data_logger.cpp
drone_docs/: CMakeLists.txt  package.xml
drone_msgs/: CMakeLists.txt  package.xml
drone_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg  DetectedFeature.msg  DetectedFeatureList.msg  DroneDirectionCommand.msg  Landmark.msg  MapSummary.msg  PointList.msg  RobotPose.msg  Variance2D.msg
drone_msgs/srv/: DroneMode.srv
feature_2dto3d_transfer/: CMakeLists.txt  package.xml
feature_2dto3d_transfer/include/feature_2dto3d_transfer/: feature_2dto3d_transfer.hpp
feature_2dto3d_transfer/src/: feature_2dto3d_transfer.cpp  feature_2dto3d_transfer_node.cpp
keyboard_control/: CMakeLists.txt  package.xml
keyboard_control/include/keyboard_control/: keyboard_control.hpp
keyboard_control/src/: keyboard_control.cpp  keyboard_control_node.cpp
px4_command_handler/: CMakeLists.txt  package.xml
px4_command_handler/include/px4_command_handler/: px4_command_handler.hpp  px4_command_handler_util.hpp
px4_command_handler/src/: px4_command_handler.cpp  px4_command_handler_node.cpp  px4_command_handler_util.cpp
px4_command_handler/test/: test_px4_command_handler_util.cpp
slam/: CMakeLists.txt  package.xml
slam/include/slam/: def_slam.hpp  slam_logger.hpp  slam_manager.hpp
slam/include/slam/association/: association_profile.hpp  base_association.hpp  ekf_bearing_initialization_strategy.hpp  ekf_nearest_neighbor_association.hpp  graph_bearing_initialization_strategy.hpp  graph_nearest_neighbor_association.hpp  joint_compatibility_association.hpp  nearest_neighbor_association.hpp  under_constrained_initialization_strategy.hpp
slam/include/slam/backend/: backend_factory.hpp  ekf_slam_backend.hpp  slam_backend.hpp
slam/include/slam/common/: def_slam.hpp  def_slam_core.hpp  def_slam_ekf.hpp  def_slam_gps.hpp  def_slam_graph.hpp  def_slam_optimization.hpp  mock_slam_logger.hpp  ros_slam_logger.hpp  slam_logger.hpp
slam/include/slam/filter/: base_filter.hpp  extended_kalman_filter.hpp  fast_slam.hpp  kalman_filter.hpp  slam_map.hpp  unscented_kalman_filter.hpp
slam/include/slam/gps/: gps_local_frame.hpp  gps_manager.hpp  gps_measurement_gate.hpp  gps_runtime_gate.hpp
slam/include/slam/graph/: graph_optimizer.hpp  internal_graph_optimizer.hpp
slam/include/slam/map/: slam_map.hpp
slam/include/slam/measurement/: bbox_measurement_model.hpp  bearing_measurement_model.hpp  measurement.hpp  measurement_factory.hpp  measurement_model.hpp  (+1 more)
slam/src/: slam_manager.cpp  slam_node.cpp
slam/src/association/: association_profile.cpp  ekf_nearest_neighbor_association.cpp  graph_nearest_neighbor_association.cpp  joint_compatibility_association.cpp  nearest_neighbor_association.cpp
slam/src/backend/: backend_factory.cpp  ekf_slam_backend.cpp
slam/src/filter/: extended_kalman_filter.cpp  fast_slam.cpp  unscented_kalman_filter.cpp
slam/src/gps/: gps_local_frame.cpp  gps_manager.cpp  gps_measurement_gate.cpp  gps_runtime_gate.cpp
slam/src/graph/: internal_graph_optimizer.cpp
slam/src/map/: slam_map.cpp
slam/src/measurement/: bbox_measurement_model.cpp  bearing_measurement_model.cpp  measurement_factory.cpp  point3d_measurement_model.cpp
slam/src/motion/: pose_motion_model.cpp  position_only_motion_model.cpp
slam/src/node/: slam_manager.cpp  slam_node.cpp
slam/src/observation/: camera_bbox_observation.cpp  observation_builder.cpp
slam/src/pipeline/: ekf_slam_pipeline.cpp  frontend_health_monitor.cpp  graph_slam_backend.cpp  graph_slam_frontend.cpp  graph_slam_pipeline.cpp  optimization_scheduler.cpp  optimization_watchdog.cpp  pipeline_factory.cpp
slam/src/startup/: gps_startup_initializer.cpp  gps_startup_session.cpp  slam_startup_contract.cpp  slam_startup_gate.cpp
slam/test/association/: test_association_profile.cpp  test_ekf_nearest_neighbor_association.cpp  test_graph_nearest_neighbor_association.cpp  test_nearest_neighbor_association.cpp
slam/test/backend/: test_ekf_slam_backend.cpp
slam/test/filter/: test_extended_kalman_filter.cpp
slam/test/gps/: test_gps_local_frame.cpp  test_gps_measurement_gate.cpp
slam/test/graph/: test_internal_graph_optimizer.cpp
slam/test/map/: test_slam_map.cpp
slam/test/measurement/: test_bearing_measurement_model.cpp  test_measurement_factory.cpp  test_point3d_measurement_model.cpp
slam/test/motion/: test_pose_motion_model.cpp  test_position_only_motion_model.cpp
slam/test/observation/: test_observation_builder.cpp
slam/test/pipeline/: test_ekf_slam_pipeline.cpp  test_graph_slam_backend.cpp  test_graph_slam_frontend.cpp  test_graph_slam_pipeline.cpp  test_optimization_scheduler.cpp  test_optimization_watchdog.cpp
slam/test/startup/: test_slam_startup_gate.cpp
slam_visualization/: CMakeLists.txt  package.xml
slam_visualization/config/: visualization_config.rviz
slam_visualization/include/slam_visualization/: slam_visualization.hpp
slam_visualization/launch/: slam_visualization_launch.py
slam_visualization/src/: slam_visualization.cpp  slam_visualization_node.cpp
visual_feature_extraction/: CMakeLists.txt  package.xml
visual_feature_extraction/include/visual_feature_extraction/: feature_extract.hpp  feature_extract_classic.hpp  feature_extract_deep.hpp  visual_feature_extraction.hpp
visual_feature_extraction/model/: dataset.yaml  training_command.txt
visual_feature_extraction/src/: feature_extract_classic.cpp  feature_extract_deep.cpp  visual_feature_extraction.cpp  visual_feature_extraction_node.cpp
(+117 files in other folders)
